<resources>
    <string name="app_name">CIREP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="espera_registro">Necesitamos que nos cuentes acerca de ti…</string>
    <string name="type_user_title">Formo parte…</string>
    <string name="location_step_title">¿Dónde vives?</string>

    <string name="type_user_ayuntamiento">Del personal del ayuntamiento</string>
    <string name="type_user_ciudadano">Soy un ciudadano</string>
    <string name="siguiente">siguiente</string>
    <string name="nombre_registro">¿Cómo te llamas?</string>
    <string name="nombre">Nombre</string>
    <string name="email_pregunta">¿Cuál es tu email?</string>
    <string name="email">Email</string>
    <string name="direccion">Escribe tu dirección</string>
    <string name="start">Empezar</string>
    <string name="tabTitle1">Mapa</string>
    <string name="tabTitle2">Incidencias</string>
    <string name="subtitle_editProfileMasc">Por favor, a continuación confirme el nuevo </string>
    <string name="subtitle_editProfileFem">Por favor, a continuación confirme la nueva </string>
    <string name="confirmar">Confirmar</string>
    <string name="volver_intentar">Volver a intentarlo</string>
    <string name="ko_message">"¡Ups, algo ha salido mal!"</string>
    <string name="ok_message">"¡Genial, ya estás registrado!"</string>

    <string name="telefono">Teléfono</string>
    <string name="datos_personales">Datos personales</string>
    <string name="contrasenya">Contraseña</string>
    <string name="ciudad">Ciudad</string>
    <string name="repite_contrasenya">Repite la contraseña</string>
    <string name="apellidos">Apellidos</string>
    <string name="genero_spinner">Selecciona tu género:</string>
    <string name="telefono_registro">¿Cúal es tu número de teléfono?</string>
    <string name="contrasenya_registro">Crea una contraseña</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_dashboard_main">DashboardMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loading">loading.json</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="descripcion">Descripción</string>
    <string name="result_report">¡Gracias por colaborar en el mantenimiento de la ciudad!</string>
    <string name="go_to_map">Ir al mapa</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo_incidencia_dialogo">¿Añadir incidencia aquí?</string>


    <string name="editProfile">Cambiar </string>

    <string name="cargando">Cargando</string>


    <string name="menu_perfil">Mi Perfil</string>
    <string name="menu_mapa">Mapa de incidencias</string>
    <string name="menu_mis_incidencias">Mis incidencias</string>
    <string name="menu_all_incidencias">Todas las incidencias</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="capture">Foto</string>
    <string name="preview_area">Area Preview</string>
    <string name="descripci_n">Descripción</string>
</resources>