<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.register.steps.StepTypeUserFragment">


    <TextView
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/type_user_ayuntamiento"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:layout_width="224dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/type_user_ciudadano"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <TextView
        android:layout_width="224dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/type_user_title"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <ImageView
        android:id="@+id/ayuntamiento"
        android:layout_width="169dp"
        android:layout_height="138dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_square"
        android:src="@drawable/ayuntamiento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <ImageView
        android:id="@+id/ciudadano"
        android:layout_width="169dp"
        android:layout_height="138dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_square"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ayuntamiento"
        app:layout_constraintVertical_bias="0.444" />
</androidx.constraintlayout.widget.ConstraintLayout>